# pipeline-edd

./: .gitignore  404.html  CATEGORIA.CSV  CIDADE.CSV  LICENSE  README.md  docker-compose.yaml  hello.py  index.html  mkdocs.yml  pyproject.toml  search.html
ProcessosDAGs/: index.html
arquitetura/: index.html
assets/data/: CATEGORIA.CSV  CIDADE.CSV  ESTADO.CSV  IMOVEL.CSV  LOCACAO.CSV  LOCALIZACAO.CSV  PESSOAS.CSV
assets/script/: entrypoint.sh
autores/: index.html
colaboracao/: index.html
comecando/: index.html
dashboard/: index.html
dicionario_dados/: index.html
docs/: ProcessosDAGs.md  arquitetura.md  autores.md  colaboracao.md  comecando.md  dashboard.md  dicionario_dados.md  ferramentas.md  index.md  instalacao.md  kpis.md  licenca.md  modelo_fisico.md  prerequisitos.md
ferramentas/: index.html
instalacao/: index.html
kpis/: index.html
licenca/: index.html
modelo_fisico/: index.html
pipeline_edd.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
prerequisitos/: index.html
scripts/python/: categoria.py  cidade.py  estado.py  imovel.py  loca.py  locali.py  pessoas.py
search/: search_index.json
site/: 404.html  index.html
site/arquitetura/: index.html
site/colaboracao/: index.html
site/comecando/: index.html
site/dicionario_dados/: index.html
site/kpis/: index.html
site/licenca/: index.html
site/modelo_fisico/: index.html
site/prerequisitos/: index.html
site/search/: search_index.json
src/: Dockerfile
src/dags/: bronze_to_silver.py  hello_spark.py  landing-to-bronze.py  origin-landing.py  origin_landing.py  (+3 more)
(+25 files in other folders)
